[package]
name = "heat"
version = "0.1.0"
authors = ["codeworm96 <codeworm96@outlook.com>"]
edition = "2018"

[dependencies]
num_cpus = "1.0"
assert_approx_eq = "1.1.0"
spin = "0.5.0"
systemstat = { git = "https://github.com/codeworm96/systemstat.git" }
rand = "0.6.5"
lazy_static = "1.3.0"
clap = "2"
